--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1 class="title">Honggang Yan</h1>
             <p class="section__text__p2">Data scientist</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/CV_HonggangYan.pdf')">
                     Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='#contact'">
