--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon experience-icon">
                         <h3>Experience</h3>
-                        <p>Data Science | Software Development<br>Aviation | Real Estate Investment | Engineering</p>
+                        <p>Data Science | Software Development<br>Aviation | Real Estate | Engineering</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon experience-icon">
                         <h3>Education</h3>
-                        <p>Two Masters Degrees<br>Data Science | Civil Engineering</p>
+                        <p>Dual Master's Degrees<br>Data Science | Civil Engineering</p>
                     </div>
                 </div>
                 <div class="text-container">
                     <p>
-                        I'm a data scientist and developer with an eclectic background — aviation, real estate
+                        I'm a data scientist and developer with an diverse background — aviation, real estate
                         investment and engineering. I've closed deals worth billions in real estate and witnessed the
                         market's ups and downs.
                         Since 2022, I've switched gears and moved to Germany,
