changed the name of projects

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <img src="./assets/project-1.png" alt="project-1" class="project-pic">
 
                     </div>
-                    <h2 class="experience-subtitle project-title">Project One</h2>
+                    <h2 class="experience-subtitle project-title">Chatbot based on RAG</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/honggangyan/'">
@@ -231,7 +231,7 @@
                         <img src="./assets/project-2.png" alt="project-1" class="project-pic">
 
                     </div>
-                    <h2 class="experience-subtitle project-title">Project Two</h2>
+                    <h2 class="experience-subtitle project-title">Customer Review Analysis with LLMs</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/honggangyan/'">
