--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        I'm a data scientist and developer with an diverse background — aviation, real estate
+                        I'm a data scientist and developer with a diverse background — aviation, real estate
                         investment and engineering. I've closed deals worth billions in real estate and witnessed the
                         market's ups and downs.
                         Since 2022, I've switched gears and moved to Germany,
