--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon experience-icon">
                         <h3>Experience</h3>
-                        <p>Data Science | Software Development<br>Aviation | Real Estate | Engineering</p>
+                        <p>Data | Tech <br>Aviation | Real Estate | Engineering</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon experience-icon">
@@ -87,11 +87,15 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>
-                        I'm a data scientist and developer with a diverse background — aviation, real estate
-                        investment and engineering. I've closed deals worth billions in real estate and witnessed the
-                        market's ups and downs.
-                        Since 2022, I've switched gears and moved to Germany,
+                    <p style="margin-bottom: 12px;">
+                        - I'm a data scientist and developer with a diverse background — aviation, real estate
+                        investment and engineering.
+                    </p>
+                    <p style="margin-bottom: 12px;">
+                        - I've closed deals worth billions in real estate and witnessed the ups and downs of Chinese housing market.
+                    </p>
+                    <p style="margin-bottom: 12px;">
+                        - Since 2022, I've switched gears and moved to Germany,
                         diving headfirst into tech. Always exploring new
                         industries like aviation, energy and finance — basically, anywhere I can bring fresh ideas and
                         spark a little innovation.
