--- a/index.html
+++ b/index.html
@@ -86,20 +86,10 @@
                         <p>Dual Master's Degrees<br>Data Science | Civil Engineering</p>
                     </div>
                 </div>
-                <div class="text-container">
-                    <p style="margin-bottom: 12px;">
-                        - I'm a data scientist and developer with a diverse background — aviation, real estate
-                        investment and engineering.
-                    </p>
-                    <p style="margin-bottom: 12px;">
-                        - I've closed deals worth billions in real estate and witnessed the ups and downs of Chinese housing market.
-                    </p>
-                    <p style="margin-bottom: 12px;">
-                        - Since 2022, I've switched gears and moved to Germany,
-                        diving headfirst into tech. Always exploring new
-                        industries like aviation, energy and finance — basically, anywhere I can bring fresh ideas and
-                        spark a little innovation.
-                    </p>
+                <div class="text-container" id="text-container">
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I'm a data scientist and developer with a diverse background — aviation, real estate investment and engineering.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I've closed deals worth billions in real estate and witnessed the ups and downs of Chinese housing market.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- Since 2022, I've switched gears and moved to Germany, diving headfirst into tech. Always exploring new industries like aviation, energy and finance — basically, anywhere I can bring fresh ideas and spark a little innovation.</p>
                 </div>
             </div>
         </div>
@@ -300,6 +290,30 @@
         <p>Copyright © 2024 Honggang Yan. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <script>
+        const bulletPoints = document.querySelectorAll('.bullet-point');
+        let delay = 0;
+
+        function revealText() {
+            bulletPoints.forEach((point, index) => {
+                setTimeout(() => {
+                    point.style.opacity = 1; // 显示文本
+                }, delay);
+                delay += 1000; // 每个文本之间的延迟
+            });
+        }
+
+        window.addEventListener('scroll', () => {
+            const section = document.getElementById('about');
+            const sectionPosition = section.getBoundingClientRect().top;
+            const screenPosition = window.innerHeight;
+
+            if (sectionPosition < screenPosition) {
+                revealText();
+                window.removeEventListener('scroll', arguments.callee); // 只执行一次
+            }
+        });
+    </script>
 </body>
 
 </html>
