--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                     </div>
                 </div>
                 <div class="text-container" id="text-container">
-                    <p style="margin-bottom: 12px;" class="bullet-point">- I'm a data scientist and developer with a diverse background — aviation, real estate investment and engineering.</p>
-                    <p style="margin-bottom: 12px;" class="bullet-point">- I've closed deals worth billions in real estate and witnessed the ups and downs of Chinese housing market.</p>
-                    <p style="margin-bottom: 12px;" class="bullet-point">- Since 2022, I've switched gears and moved to Germany, diving headfirst into tech. Always exploring new industries like aviation, energy and finance — basically, anywhere I can bring fresh ideas and spark a little innovation.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I'm a data scientist and developer with a diverse background in aviation, real estate investment and engineering.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I've closed billion-euro deals in real estate and witnessed the highs and lows of Chinese housing market.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- Since 2022, I've shifted gears and moved to Germany, diving headfirst into tech. I'm constantly exploring new industries such as aviation, energy and finance — wherever I can bring fresh ideas and spark a little innovation.</p>
                 </div>
             </div>
         </div>
