--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Skills</h1>
         <div class="section-experience">
             <div class="experience-container">
                 <div class="details-container">
@@ -111,37 +111,37 @@
                             </div>
                         </div>
                         <div class="skills">
-                            <img src="./assets/checkmark.png" alt="Machine Learning icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="SQL icon" class="icon">
                             <div class="skills-details">
                                 <h3>SQL</h3>
                                 <p>Experienced</p>
                             </div>
                         </div>
                         <div class="skills">
-                            <img src="./assets/checkmark.png" alt="SQL icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="ML/DL icon" class="icon">
                             <div class="skills-details">
                                 <h3>ML/DL</h3>
                                 <p>Experienced</p>
                             </div>
                         </div>
                         <div class="skills">
-                            <img src="./assets/checkmark.png" alt="html icon" class="icon">
-                            <div class="skills-details">
-                                <h3>NLP</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </div>
-                        <div class="skills">
-                            <img src="./assets/checkmark.png" alt="html icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="LLMs icon" class="icon">
                             <div class="skills-details">
                                 <h3>LLMs</h3>
                                 <p>Experienced</p>
                             </div>
                         </div>
                         <div class="skills">
-                            <img src="./assets/checkmark.png" alt="html icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="Statistics icon" class="icon">
                             <div class="skills-details">
                                 <h3>Statistics</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Database icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Database</h3>
                                 <p>Experienced</p>
                             </div>
                         </div>
@@ -192,6 +192,41 @@
                                 <p>Intermediate</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-subtitle">Real Estate Investment</h2>
+                    <div class="skills-container">
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Modeling icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Modeling</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Real Estate Valuation icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Valuation</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Reporting icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Reporting</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Trasaction icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Trasaction</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
