--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
                     </div>
                 </div>
                 <div class="text-container" id="text-container">
-                    <p style="margin-bottom: 12px;" class="bullet-point">- I'm a data scientist and developer with a diverse background in real estate investment and engineering.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I'm a data scientist and developer with a diverse background — aviation, real estate investment and engineering.</p>
                     <p style="margin-bottom: 12px;" class="bullet-point">- I've closed billion-euro deals in real estate and witnessed the highs and lows of Chinese housing market.</p>
-                    <p style="margin-bottom: 12px;" class="bullet-point">- Since 2022, I've shifted gears and moved to Germany, diving headfirst into tech. I'm constantly exploring new industries such as aviation, energy and finance — wherever I can bring fresh ideas and spark a little innovation.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- Since 2022, I've shifted gears and moved to Germany, diving headfirst into tech. I'm constantly exploring new industries such as finance, trading and energy — wherever I can bring fresh ideas and spark a little innovation.</p>
+                    <p style="margin-bottom: 12px;" class="bullet-point">- I speak fluent English und Deutsch auf A2-Niveau. Ich lerne Deutsch im Goethe-Institut. Bis Februar 2025 werde ich B1 erreichen.</p>
                 </div>
             </div>
         </div>
@@ -243,14 +244,14 @@
                         <img src="./assets/project-1.png" alt="project-1" class="project-pic">
 
                     </div>
-                    <h2 class="experience-subtitle project-title">Chatbot based on RAG</h2>
+                    <h2 class="experience-subtitle project-title">Energy Trading</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/'">
+                            onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/'">
+                            onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">
                             Live Demo
                         </button>
                     </div>
@@ -260,7 +261,7 @@
                         <img src="./assets/project-2.png" alt="project-1" class="project-pic">
 
                     </div>
-                    <h2 class="experience-subtitle project-title">Customer Review Analysis with LLMs</h2>
+                    <h2 class="experience-subtitle project-title">Chatbot based on RAG</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/honggangyan/'">
@@ -277,14 +278,14 @@
                         <img src="./assets/project-3.png" alt="project-1" class="project-pic">
 
                     </div>
-                    <h2 class="experience-subtitle project-title">Energy Trading</h2>
+                    <h2 class="experience-subtitle project-title">Customer Review Analysis with LLMs</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">
+                            onclick="location.href='https://github.com/honggangyan/'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">
+                            onclick="location.href='https://github.com/honggangyan/'">
                             Live Demo
                         </button>
                     </div>
