--- a/index.html
+++ b/index.html
@@ -265,11 +265,7 @@
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/honggangyan/'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/'">
-                            Live Demo
+                            Launching soon
                         </button>
                     </div>
                 </div>
@@ -282,11 +278,7 @@
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/honggangyan/'">
-                            Github
-                        </button>
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/honggangyan/'">
-                            Live Demo
+                            Launching soon
                         </button>
                     </div>
                 </div>
