--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <div class="skills">
                             <img src="./assets/checkmark.png" alt="Modeling icon" class="icon">
                             <div class="skills-details">
-                                <h3>Modeling</h3>
+                                <h3>Financial Modeling</h3>
                                 <p>Experienced</p>
                             </div>
                         </div>
