--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
             <div class="gallery-item">
                 <img src="assets/Hiking-2.png" alt="Hiking-2" class="gallery-image">
             </div>
+            <div class="gallery-item">
+                <img src="assets/Kassel.png" alt="Kassel" class="gallery-image">
+            </div>
+
 
             </div>
         </div>
