--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-subtitle">Real Estate Investment</h2>
+                    <h2 class="experience-subtitle">Business</h2>
                     <div class="skills-container">
                         <div class="skills">
                             <img src="./assets/checkmark.png" alt="Modeling icon" class="icon">
@@ -217,10 +217,24 @@
                             </div>
                         </div>
                         <div class="skills">
-                            <img src="./assets/checkmark.png" alt="Trasaction icon" class="icon">
+                            <img src="./assets/checkmark.png" alt="Transaction icon" class="icon">
                             <div class="skills-details">
-                                <h3>Trasaction</h3>
+                                <h3>Transaction</h3>
                                 <p>Experienced</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Trading icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Trading</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </div>
+                        <div class="skills">
+                            <img src="./assets/checkmark.png" alt="Trading icon" class="icon">
+                            <div class="skills-details">
+                                <h3>Revenue Management</h3>
+                                <p>Learning</p>
                             </div>
                         </div>
                     </div>
