--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
 
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
-        <h1 class="title">Projects</h1>
+        <h1 class="title">Projects & Research</h1>
         <div class="projects-container">
-            <div class="about-containers">
+            <div class="projects-about-containers">
                 <div class="details-container color-container">
                     <div class="one-project-container">
                         <img src="./assets/project-1.png" alt="project-1" class="project-pic">
@@ -261,7 +261,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="one-project-container">
-                        <img src="./assets/project-2.png" alt="project-1" class="project-pic">
+                        <img src="./assets/project-2.png" alt="project-2" class="project-pic">
                     </div>
                     <h2 class="experience-subtitle project-title">Chatbot based on RAG</h2>
                     <div class="btn-container">
@@ -270,11 +270,30 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="one-project-container">
-                        <img src="./assets/project-3.png" alt="project-1" class="project-pic">
+                        <img src="./assets/project-3.png" alt="project-3" class="project-pic">
                     </div>
                     <h2 class="experience-subtitle project-title">Customer Review Analysis with LLMs</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/'">Launching soon</button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="one-project-container">
+                        <img src="./assets/paper-1.png" alt="paper-1" class="project-pic">
+                    </div>
+                    <h2 class="experience-subtitle project-title">Preferential flow in MSW</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='http://www.cgejournal.com/en/article/doi/10.11779/CJGE201807019'">View Paper</button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="one-project-container">
+                        <img src="./assets/German-app.jpg" alt="project-4" class="project-pic">
+                    </div>
+                    <h2 class="experience-subtitle project-title">Wortschatz App</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='http://www.cgejournal.com/en/article/doi/10.11779/CJGE201807019'">View Demo</button>
                     </div>
                 </div>
             </div>
