fix bug of pic not showing

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="one-project-container">
-                        <img src="./assets/paper-1.png" alt="paper-1" class="project-pic">
+                        <img src="./assets/Paper-1.png" alt="paper-1" class="project-pic">
                     </div>
                     <h2 class="experience-subtitle project-title">Preferential flow in MSW</h2>
                     <div class="btn-container">
