--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
                     </div>
                     <h2 class="experience-subtitle project-title">Wortschatz App</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='http://www.cgejournal.com/en/article/doi/10.11779/CJGE201807019'">View Demo</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/wortschatz_app'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/wortschatz_app'">Demo Launching Soon</button>
                     </div>
                 </div>
             </div>
