--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <h2 class="experience-subtitle project-title">Wortschatz App</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/wortschatz_app'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/wortschatz_app'">Launching Soon</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=OGcRTOpHWcI'">Live Demo</button>
                     </div>
                 </div>
             </div>
