change the name

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="one-project-container">
                         <img src="./assets/project-1.png" alt="project-1" class="project-pic">
                     </div>
-                    <h2 class="experience-subtitle project-title">Energy Trading</h2>
+                    <h2 class="experience-subtitle project-title">Energy Trading Simulation</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/honggangyan/energy_trading_simulation'">Github</button>
                     </div>
