--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.jpg" alt="profile picture" class="about-pic">
+                <img src="./assets/about-pic.png" alt="profile picture" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
@@ -349,6 +349,9 @@
             </div>
             <div class="gallery-item">
                 <img src="assets/Hiking-2.png" alt="Hiking-2" class="gallery-image">
+            </div>
+            <div class="gallery-item">
+                <img src="assets/honggang&GR.png" alt="honggang&dog" class="gallery-image">
             </div>
         </div>
     </section>
