update German level

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p class="bullet-point">- I'm a data scientist and developer with a diverse background — aviation, real estate investment and engineering.</p>
                     <p class="bullet-point">- I've closed billion-euro deals in real estate and witnessed the highs and lows of Chinese housing market.</p>
                     <p class="bullet-point">- Since 2022, I've shifted gears and moved to Germany, diving headfirst into tech. I'm constantly exploring new industries such as finance, trading and energy — wherever I can bring fresh ideas and spark a little innovation.</p>
-                    <p class="bullet-point">- I speak fluent English und Deutsch auf A2/B1-Niveau. Ich lerne Deutsch im Goethe-Institut.</p>
+                    <p class="bullet-point">- I speak fluent English und Deutsch auf B1-Niveau. Ich lerne Deutsch im Goethe-Institut.</p>
                 </div>
             </div>
         </div>
